# grin_frb_win

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/grin_frb_win/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/localization/: loc.dart  locale_store.dart
lib/src/rust/frb_generated.dart/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/ui/: home_screen.dart  swap_wizard.dart
lib/src/wallet/: models.dart  wallet_service.dart  wallet_store.dart
lib/test_support/: error_app_public.dart  fakes.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: api.rs  atomic_swap.rs  frb_generated.rs  lib.rs  wallet.rs
test/: app_bootstrap_smoke_test.dart  error_app_public_test.dart  home_screen_locale_test.dart  home_screen_locked_test.dart  home_screen_with_fakes_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
