[package]
name = "grin_wallet_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # erzeugt DLL für Windows

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# HTTP-Client (TLS ohne OpenSSL, gut für Windows)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1"
grin_core = "5.3.3"
grin_keychain = "5.3.3"
grin_util = "5.3.3"
grin_wallet_api = { path = "../grin-wallet/api" }
grin_wallet_config = { path = "../grin-wallet/config" }
grin_wallet_controller = { path = "../grin-wallet/controller" }
grin_wallet_impls = { path = "../grin-wallet/impls" }
grin_wallet_libwallet = { path = "../grin-wallet/libwallet" }
